$Id: History,v 1.6 2000-11-24 10:50:41 stesting Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    TestEm2 History file
                    --------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

25th November 2000 Steve O'Neale (tagset210)
- Update test outputs for min.delta energy cut and cut tabulation
- Update test outputs Lateral profile changes comparable with rms (10 per cent)
-             in first layers, Radial profile stable (values to 1 percent).

June 28, 2000  John Allison  (testem2-V02-00-00)
- Updated TestEm2.out for geant4-02-00.

June 24, 2000  John Allison  (testem2-V01-01-02)
- Updated TestEm2.out for stand-V01-01-05 and utils-V01-01-03.

June 20, 2000  mma          (testem2-V01-01-01)
- Updated TestEm2.in : /gun/particle e-

June 17, 2000  John Allison  (testem2-V01-00-00)
- Updated TestEm2.out for geant4-01-01-ref-06.